objects/Delegate__c.object
<CustomObject>
    <fields>
        <fullName>Speaker_vetted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Speaker vetted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>Event__r.Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Final__c</fullName>
        <formula>IF (Walk_In__c = true, &apos;Walk In&apos;, TEXT(Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Final</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Full__c</fullName>
        <formula>IF ( !ISBLANK(TEXT(Invitation_Status__c)),
     TEXT(Invitation_Status__c)+
        IF( !ISBLANK(TEXT(RSVP_Status__c)),&quot;:&quot;+TEXT(RSVP_Status__c), &quot;&quot;)+
        IF( !ISBLANK(TEXT(Registration_Status__c)),&quot;:&quot;+TEXT(Registration_Status__c),&quot;&quot;)+
        IF( !ISBLANK(TEXT(Status__c)), &quot;:&quot;+TEXT(Status__c),&quot;&quot;),
     TEXT(Registration_Status__c)+&quot;:&quot;+TEXT(Status__c)
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Full</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <label>Status Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>The attendnace status of the delegate indicating if he/she actaully attended the event.</inlineHelpText>
        <label>Attendance Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Delegate_Attendance_Statuses</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ticket_Quantity__c</fullName>
        <label>Ticket Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ticket_Type_Price__c</fullName>
        <label>Ticket Type Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <formula>round((now() - Registered_Date__c) * 24,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Ticket_Price__c</fullName>
        <formula>Ticket_Quantity__c * Ticket_Type_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Ticket Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transport_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transport Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT( Event__r.Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Identification__c</fullName>
        <label>Type of Identification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SA ID Number</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>Non SA ID Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <formula>Event__r.Venue__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Venue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voucher_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voucher Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Waiting_List_Priority__c</fullName>
        <description>Waiting List Priority</description>
        <inlineHelpText>B List Guest Prioritised for Invitation List based on RSVP from A List and Compliance Approval</inlineHelpText>
        <label>Waiting List Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Walk_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Walk-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WinningNumber__c</fullName>
        <label>Winning Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isFlaggedForDeletion__c</fullName>
        <description>RN - CloudSmiths - Hidden field that shows an X if this delegate could be deleted from the A and B list. The X is displayed on the managed delegates page</description>
        <formula>IF( 
 ( ISPICKVAL(Invitation_Status__c,&apos;Proposed&apos;) &amp;&amp; 
  ( 
   ISBLANK( Email__c ) ||  ISNULL( Email__c)
  )
 ),&apos;X&apos;,&apos;&apos;
)</formula>
        <label>isFlaggedForDeletion</label>
        <type>Text</type>
    </fields>
    <label>Delegate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Company__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Status_Full__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Barclays_Africa_Group_Dinner</fullName>
        <columns>NAME</columns>
        <columns>Invitation_Status__c</columns>
        <columns>Overall_Status__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Company__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Company__c</columns>
        <columns>Contact_Job_Title__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Auto_Emails_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event__c</field>
            <operation>equals</operation>
            <value>Barclays Africa Group Dinner</value>
        </filters>
        <label>Barclays Africa Group Dinner</label>
    </listViews>
    <listViews>
        <fullName>Champagne_2019</fullName>
        <columns>NAME</columns>
        <columns>Invitation_Status__c</columns>
        <columns>Overall_Status__c</columns>
        <columns>Contact__c</columns>
        <columns>Contact_Company__c</columns>
        <columns>Host__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Auto_Emails_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event__c</field>
            <operation>equals</operation>
            <value>Absa Champagne Festival</value>
        </filters>
        <label>Champagne Festival 2019</label>
    </listViews>
    <listViews>
        <fullName>Kaizer_Chiefs_vs_Orlando_Pirates</fullName>
        <columns>NAME</columns>
        <columns>Invitation_Status__c</columns>
        <columns>Overall_Status__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Contact__c</columns>
        <columns>Company__c</columns>
        <columns>Email__c</columns>
        <columns>Mobile__c</columns>
        <columns>Contact_Company__c</columns>
        <columns>Contact_Job_Title__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Auto_Emails_Sent__c</columns>
        <columns>Host__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event__c</field>
            <operation>equals</operation>
            <value>Kaizer Chiefs vs. Orlando Pirates</value>
        </filters>
        <label>Kaizer Chiefs vs. Orlando Pirates</label>
    </listViews>
    <nameField>
        <displayFormat>D-{000000}</displayFormat>
        <label>Delegate #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delegates</pluralLabel>
    <recordTypes>
        <fullName>Attendee</fullName>
        <active>true</active>
        <description>Person who attended without invitation or registration</description>
        <label>Attendee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Invitee</fullName>
        <active>true</active>
        <description>Person who may/has/will be invited to attend the event</description>
        <label>Invitee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Registrant</fullName>
        <active>true</active>
        <description>Person who has registered for an open event OR has been added directly by the event organiser</description>
        <label>Registrant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Speaker</fullName>
        <active>true</active>
        <description>Person who will speak at the event</description>
        <label>Speaker</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Attendee_Vetting</fullName>
        <active>true</active>
        <errorConditionFormula>Attendee_vetted__c  &lt;&gt; True 
&amp;&amp; ISPICKVAL( Invitation_Status__c , &quot;Approved&quot;) 
&amp;&amp;  Event__r.RecordType.DeveloperName = &apos;Market_Research&apos; 
&amp;&amp;  RecordType.DeveloperName &lt;&gt; &apos;Speaker&apos;</errorConditionFormula>
        <errorMessage>Please make sure that you have vetted a delegate or speaker before changing the invitation status to &quot;Approved&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GEPOC_validation_for_New_speakers_ABC</fullName>
        <active>true</active>
        <errorConditionFormula>ABC_approval_obtained__c  &lt;&gt; true   &amp;&amp;  ISPICKVAL( New_Speaker__c ,&quot;Yes&quot; )
&amp;&amp; Event__r.RecordType.DeveloperName = &quot;Market_Research&quot; 
&amp;&amp; RecordType.DeveloperName = &quot;Speaker&quot;</errorConditionFormula>
        <errorDisplayField>ABC_approval_obtained__c</errorDisplayField>
        <errorMessage>Please complete this field for new speakers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GEPOC_validation_for_New_speakers_No</fullName>
        <active>true</active>
        <errorConditionFormula>Speaker_Vendor_Invoice_Received__c  &lt;&gt; true  &amp;&amp; ISPICKVAL( New_Speaker__c , &quot;No&quot;)
&amp;&amp; Event__r.RecordType.DeveloperName = &quot;Market_Research&quot; 
&amp;&amp; RecordType.DeveloperName = &quot;Speaker&quot;</errorConditionFormula>
        <errorDisplayField>Speaker_Vendor_Invoice_Received__c</errorDisplayField>
        <errorMessage>Please complete this field for existing speakers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GEPOC_validation_for_New_speakers_Vendor</fullName>
        <active>true</active>
        <errorConditionFormula>Speaker_vendor_proof_received__c  &lt;&gt; true &amp;&amp; ISPICKVAL( New_Speaker__c , &quot;No&quot;)
&amp;&amp; Event__r.RecordType.DeveloperName = &quot;Market_Research&quot; 
&amp;&amp; RecordType.DeveloperName = &quot;Speaker&quot;</errorConditionFormula>
        <errorDisplayField>Speaker_vendor_proof_received__c</errorDisplayField>
        <errorMessage>Please complete this field for existing speakers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GEPOC_validation_for_New_speakers_Yes_Fo</fullName>
        <active>true</active>
        <errorConditionFormula>Speaker_forms_completed_and_approved__c  &lt;&gt; true  
&amp;&amp; ISPICKVAL( New_Speaker__c ,&quot;Yes&quot; ) 
&amp;&amp; Event__r.RecordType.DeveloperName = &quot;Market_Research&quot; 
&amp;&amp; RecordType.DeveloperName = &quot;Speaker&quot;</errorConditionFormula>
        <errorDisplayField>Speaker_forms_completed_and_approved__c</errorDisplayField>
        <errorMessage>Please complete this field for new speakers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GEPOC_validation_for_New_speakers_Yes_Nu</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Speaker_vendor_number__c  )  &amp;&amp;  ISPICKVAL( New_Speaker__c ,&quot;Yes&quot; )
&amp;&amp; Event__r.RecordType.DeveloperName = &quot;Market_Research&quot; 
&amp;&amp; RecordType.DeveloperName = &quot;Speaker&quot;</errorConditionFormula>
        <errorDisplayField>Speaker_vendor_number__c</errorDisplayField>
        <errorMessage>Please complete this field for new speakers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Speaker_vetting</fullName>
        <active>true</active>
        <errorConditionFormula>Speaker_vetted__c  &lt;&gt; true  
&amp;&amp;  ISPICKVAL( Invitation_Status__c , &quot;Approved&quot;) 
&amp;&amp;  Event__r.RecordType.DeveloperName = &apos;Market_Research&apos;
&amp;&amp;  RecordType.DeveloperName = &apos;Speaker&apos;</errorConditionFormula>
        <errorMessage>Please make sure that you have vetted a speaker before changing the invitation status to &quot;Approved&quot;</errorMessage>
    </validationRules>
</CustomObject>